initiate transformer code

--- a/transformer_from_scratch.ipynb
+++ b/transformer_from_scratch.ipynb
@@ -2,33 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
-    "import torch.utils.data as data\n",
-    "import math\n",
-    "import copy"
+    "import math"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "多头注意力机制\n",
+    "**多头注意力机制**\n",
+    "\n",
+    "参考：https://towardsdatascience.com/build-your-own-transformer-from-scratch-using-pytorch-84c850470dcb\n",
+    "\n",
+    "多头注意力机制计算序列中每对位置之间的注意力。它由多个“注意力头”组成，捕捉输入序列的不同方面。\n",
+    "\n",
+    "MultiHeadAttention 代码通过输入参数和线性变换层初始化模块。它计算注意力分数，将输入张量切分为多个头，并结合所有头的注意力输出。forward 方法计算多头自注意力，使模型能够关注输入序列的不同方面。\n",
     "\n",
     "![multi_head_attention](./source/multi_head_attention.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# x -> (batch_size,seq_length,d_model)\n",
+    "# option : d_model // num_heads = d_k\n",
+    "# Q,K,V -> (batch_size,seq_length,num_heads,d_k) -> (batch_size,num_heads,seq_length,d_k) \n",
     "class MultiHeadAttention(nn.Module):\n",
     "    def __init__(self, d_model, num_heads):\n",
     "        super(MultiHeadAttention, self).__init__()\n",
@@ -73,8 +80,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**FFN**\n",
+    "\n",
+    "PositionWiseFeedForward 类继承了 PyTorch 的 nn.Module，并实现了逐点前馈网络。该类使用两个线性变换层和一个 ReLU 激活函数进行初始化。forward 方法依次应用这些变换和激活函数来计算输出。这个过程使模型在进行预测时能够考虑输入元素的位置。"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,8 +106,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**PositionalEncoding**\n",
+    "\n",
+    "位置编码用于注入输入序列中每个标记的位置信息。它使用不同频率的正弦和余弦函数生成位置编码。\n",
+    "\n",
+    "\n",
+    "PositionalEncoding 类通过 d_model 和 max_seq_length 输入参数初始化，创建一个张量来存储位置编码值。该类根据缩放因子 div_term 分别计算偶数和奇数索引的正弦和余弦值。forward 方法通过将存储的位置编码值添加到输入张量来计算位置编码，从而使模型能够捕捉输入序列的位置信息。\n",
+    "\n",
+    "现在，我们将构建编码器和解码器层。"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,8 +143,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**EncoderLayer**\n",
+    "\n",
+    "编码器层由一个多头注意力层、一个逐点前馈层和两个层归一化层组成。\n",
+    "\n",
+    "EncoderLayer 类通过输入参数和组件初始化，包括一个 MultiHeadAttention 模块、一个 PositionWiseFeedForward 模块、两个层归一化模块和一个 dropout 层。forward 方法通过应用自注意力计算编码器层输出，将注意力输出添加到输入张量并对结果进行归一化。然后，它计算逐点前馈输出，将其与归一化的自注意力输出结合，并在返回处理后的张量之前对最终结果进行归一化。"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,8 +177,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**DecoderLayer**\n",
+    "\n",
+    "解码器层由两个多头注意力层、一个逐点前馈层和三个层归一化层组成。\n",
+    "\n",
+    "DecoderLayer 类通过输入参数和组件初始化，包括用于掩码自注意力和交叉注意力的 MultiHeadAttention 模块、PositionWiseFeedForward 模块、三个层归一化模块和一个 dropout 层。\n",
+    "\n",
+    "\n",
+    "forward 方法通过以下步骤计算解码器层的输出：\n",
+    "\n",
+    "* 计算掩码自注意力输出，将其添加到输入张量，接着进行 dropout 和层归一化。\n",
+    "* 计算解码器和编码器输出之间的交叉注意力输出，将其添加到归一化后的掩码自注意力输出，接着进行 dropout 和层归一化。\n",
+    "* 计算逐点前馈输出，将其与归一化后的交叉注意力输出结合，接着进行 dropout 和层归一化。\n",
+    "返回处理后的张量。\n",
+    "\n",
+    "这些操作使解码器能够基于输入和编码器输出生成目标序列。\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,8 +225,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Transformer\n",
+    "\n",
+    "Transformer 类结合了之前定义的模块，创建一个完整的 Transformer 模型。在初始化过程中，Transformer 模块设置输入参数并初始化各种组件，包括用于源序列和目标序列的嵌入层、PositionalEncoding 模块、用于创建堆叠层的 EncoderLayer 和 DecoderLayer 模块、用于投影解码器输出的线性层以及一个 dropout 层。\n",
+    "\n",
+    "generate_mask 方法创建源序列和目标序列的二进制掩码，用于忽略填充标记并防止解码器关注未来标记。forward 方法通过以下步骤计算 Transformer 模型的输出：\n",
+    "\n",
+    "1. 使用 generate_mask 方法生成源序列和目标序列的掩码。\n",
+    "2. 计算源序列和目标序列的嵌入，并应用位置编码和 dropout。\n",
+    "3. 通过编码器层处理源序列，更新 enc_output 张量。\n",
+    "4. 通过解码器层处理目标序列，使用 enc_output 和掩码，并更新 dec_output 张量。\n",
+    "5. 对解码器输出应用线性投影层，获取输出 logits。\n",
+    "\n",
+    "这些步骤使得 Transformer 模型能够根据其组件的联合功能处理输入序列并生成输出序列。"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,8 +288,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**准备数据**\n",
+    "\n",
+    "在本示例中，我们将创建一个玩具数据集进行演示。在实际应用中，您会使用一个更大的数据集，预处理文本，并创建源语言和目标语言的词汇映射。"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,24 +319,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**训练模型**\n",
+    "\n",
+    "现在我们将使用示例数据来训练模型。在实际应用中，您会使用一个更大的数据集，并将其分割成训练集和验证集。"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 1, Loss: 8.679849624633789\n",
-      "Epoch: 2, Loss: 8.549412727355957\n",
-      "Epoch: 3, Loss: 8.48022747039795\n",
-      "Epoch: 4, Loss: 8.429144859313965\n",
-      "Epoch: 5, Loss: 8.37117862701416\n",
-      "Epoch: 6, Loss: 8.306817054748535\n",
-      "Epoch: 7, Loss: 8.231691360473633\n",
-      "Epoch: 8, Loss: 8.152490615844727\n",
-      "Epoch: 9, Loss: 8.060476303100586\n",
-      "Epoch: 10, Loss: 7.985535144805908\n"
+      "Epoch: 1, Loss: 8.67525863647461\n",
+      "Epoch: 2, Loss: 8.541637420654297\n",
+      "Epoch: 3, Loss: 8.47097110748291\n",
+      "Epoch: 4, Loss: 8.420844078063965\n",
+      "Epoch: 5, Loss: 8.361783981323242\n",
+      "Epoch: 6, Loss: 8.296092987060547\n",
+      "Epoch: 7, Loss: 8.216520309448242\n",
+      "Epoch: 8, Loss: 8.13842487335205\n",
+      "Epoch: 9, Loss: 8.058088302612305\n",
+      "Epoch: 10, Loss: 7.977389335632324\n"
      ]
     }
    ],
