--- a/transformer_from_scratch.ipynb
+++ b/transformer_from_scratch.ipynb
@@ -24,7 +24,8 @@
     "\n",
     "MultiHeadAttention 代码通过输入参数和线性变换层初始化模块。它计算注意力分数，将输入张量切分为多个头，并结合所有头的注意力输出。forward 方法计算多头自注意力，使模型能够关注输入序列的不同方面。\n",
     "\n",
-    "![multi_head_attention](./source/multi_head_attention.png)"
+    "![multi_head_attention](./source/multi_head_attention.png)\n",
+    "\n"
    ]
   },
   {
@@ -363,6 +364,114 @@
     "    optimizer.step()\n",
     "    print(f\"Epoch: {epoch+1}, Loss: {loss.item()}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 面试问题\n",
+    "\n",
+    "\n",
+    "### 问题1：为什么采用多头？\n",
+    "\n",
+    "在 Transformer 模型中采用多头注意力机制（Multi-Head Attention）的主要原因是它可以增强模型的表达能力和灵活性，使模型能够捕捉到输入序列中的不同特征和关系。以下是具体原因：\n",
+    "\n",
+    "1. 捕捉不同的特征和关系\n",
+    "\n",
+    "多头注意力机制可以让模型从不同的角度看待输入序列中的信息。每个注意力头会学习不同的子空间表示，从而可以捕捉到序列中的不同模式和依赖关系。通过结合这些不同头的输出，模型可以综合多种视角的信息，获得更丰富的表示。\n",
+    "\n",
+    "2. 增强模型的平行计算能力\n",
+    "\n",
+    "在多头注意力机制中，输入序列会被分割成多个子空间，并行计算每个子空间的注意力。这种并行计算提高了计算效率，使得训练和推理过程更快。同时，模型可以更好地利用计算资源，提升整体性能。\n",
+    "\n",
+    "3. 提高稳定性和性能\n",
+    "\n",
+    "多头注意力机制有助于分散注意力，使得模型更稳定，并减少单一头可能带来的噪声和偏差。每个头都能学习到不同的注意力模式，综合起来，可以提高模型的泛化能力和预测性能。\n",
+    "\n",
+    "4. 学习长程依赖\n",
+    "\n",
+    "在自然语言处理中，词语之间的依赖关系可能跨越较长的距离。多头注意力机制可以让模型在不同头之间关注不同距离的依赖关系，从而更好地捕捉长程依赖信息，提升对上下文的理解能力。\n",
+    "\n",
+    "\n",
+    "### 问题2：为什么输入需要乘以W矩阵？\n",
+    "\n",
+    "在Transformer模型中，输入序列乘以权重矩阵 \\( W \\) 是为了进行线性变换，从而将输入嵌入到一个高维空间中，使其适应模型的内部表示和处理。具体来说，有以下几个主要原因：\n",
+    "\n",
+    "1. 线性变换以适应模型维度\n",
+    "Transformer模型中的输入数据通常是词汇嵌入（word embeddings），这些嵌入的维度可能与模型的内部维度（通常称为 \\( d_{model} \\)）不匹配。为了将输入嵌入转换成模型所需的维度，必须进行线性变换。这可以通过乘以一个权重矩阵 \\( W \\) 来实现。假设输入的嵌入维度是 \\( d_{input} \\)，模型的维度是 \\( d_{model} \\)，那么权重矩阵 \\( W \\) 的维度就是 \\( d_{input} \\times d_{model} \\)。\n",
+    "\n",
+    "\\[ \\text{Transformed Input} = \\text{Input} \\times W \\]\n",
+    "\n",
+    "2. 参数共享和表示学习\n",
+    "通过引入权重矩阵 \\( W \\)，模型可以学习到一种有效的表示方法，使得输入序列在高维空间中能够捕捉到更多的语义和上下文信息。这有助于模型更好地理解和处理输入数据。\n",
+    "\n",
+    "3. 多头注意力机制中的变换\n",
+    "在多头注意力机制（Multi-Head Attention）中，输入序列会被多次线性变换以生成不同的查询（Query）、键（Key）和值（Value）。具体来说，每个头都会有自己的一组权重矩阵 \\( W_Q, W_K, W_V \\)，将输入序列分别映射到查询、键和值空间：\n",
+    "\n",
+    "\\[ Q = XW_Q, \\quad K = XW_K, \\quad V = XW_V \\]\n",
+    "\n",
+    "这些线性变换允许每个注意力头捕捉输入数据的不同方面和特征。\n",
+    "\n",
+    "1. 增加模型容量\n",
+    "通过在输入上应用线性变换，模型的参数数量增加，从而提高了模型的容量和复杂性。这使得Transformer能够捕捉到更复杂的模式和关系，提高模型的表达能力。\n",
+    "\n",
+    "### 问题3：为什么采用scaled dot product Attention机制，而不是additive attention机制？\n",
+    "\n",
+    "Transformer模型采用了scaled dot-product attention机制而不是additive attention机制，主要有以下几个原因：\n",
+    "\n",
+    "1. 计算效率\n",
+    "- **Scaled Dot-Product Attention**: 这个机制主要依赖于矩阵乘法运算。现代硬件（如GPU和TPU）在处理矩阵乘法时非常高效，可以进行大规模的并行计算。这使得scaled dot-product attention在计算上非常快速。\n",
+    "- **Additive Attention**: 这种机制通常涉及到逐元素的操作和非线性激活函数，计算量较大，无法充分利用矩阵运算的并行性，因此在处理大规模数据时效率较低。\n",
+    "\n",
+    "2. 简单性和并行性\n",
+    "- **Scaled Dot-Product Attention**: 公式相对简单，易于实现和优化。其核心步骤是计算查询（Query）和键（Key）之间的点积，然后通过softmax函数归一化。这些操作都可以很自然地并行化。\n",
+    "- **Additive Attention**: 需要先对查询和键进行逐元素加法操作，然后通过一个非线性激活函数（如tanh）处理，最后再乘以一个权重矩阵。这些步骤相对复杂，不容易并行化。\n",
+    "\n",
+    "3. 效果和性能\n",
+    "- **Scaled Dot-Product Attention**: 在实际应用中，特别是自然语言处理任务中，scaled dot-product attention表现出色。它被证明在各种任务上都能取得很好的效果，如机器翻译、文本生成等。\n",
+    "- **Additive Attention**: 尽管在某些特定任务中可能表现良好，但整体上其效果往往不如scaled dot-product attention。\n",
+    "\n",
+    "4. 规范化和稳定性\n",
+    "- **Scaled Dot-Product Attention**: 在计算查询和键的点积后乘以一个缩放因子 \\( \\frac{1}{\\sqrt{d_k}} \\)（其中 \\( d_k \\) 是键的维度），可以防止随着维度增加点积值变得过大，导致softmax函数输出的梯度过小。这种缩放机制提高了模型的训练稳定性。\n",
+    "- **Additive Attention**: 不存在这种缩放机制，因此在处理高维数据时可能会面临数值稳定性的问题。\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "### 问题4：为什么scaled dot product Attention机制需要除以sqrt(dk)？\n",
+    "\n",
+    "在scaled dot-product attention机制中，除以 \\(\\sqrt{d_k}\\) 的原因主要是为了控制点积结果的幅度，防止其值过大，从而提高数值稳定性。以下是更详细的解释：\n",
+    "\n",
+    "1. 点积的幅度控制\n",
+    "当输入向量的维度 \\(d_k\\) 较大时，查询（Query）和键（Key）向量的点积值也会变得很大。具体来说，如果查询和键向量中的元素服从均值为0、方差为1的正态分布，那么它们的点积的期望值和方差分别为：\n",
+    "\n",
+    "\\[ \\text{E}[\\mathbf{q} \\cdot \\mathbf{k}] = 0 \\]\n",
+    "\\[ \\text{Var}[\\mathbf{q} \\cdot \\mathbf{k}] = d_k \\]\n",
+    "\n",
+    "这意味着随着 \\(d_k\\) 的增加，点积的方差会增大，导致点积值可能会变得很大。\n",
+    "\n",
+    "2. Softmax函数的梯度消失问题\n",
+    "在attention机制中，点积结果在经过softmax函数处理时，如果值过大，会导致softmax的输出接近于零或一，这样会使梯度在反向传播时几乎消失，进而影响模型的训练效果。具体来说：\n",
+    "\n",
+    "- 如果点积结果较大，softmax函数会输出非常尖锐的概率分布，即接近于一的位置概率非常高，其他位置概率非常低。\n",
+    "- 这种情况下，梯度在反向传播时会很小，导致梯度消失问题，模型难以有效训练。\n",
+    "\n",
+    "3. 缩放因子的引入\n",
+    "为了缓解上述问题，在计算点积后，我们引入了一个缩放因子 \\(\\sqrt{d_k}\\) 来调整点积值的幅度：\n",
+    "\n",
+    "\\[ \\text{Attention}(Q, K, V) = \\text{softmax}\\left(\\frac{QK^T}{\\sqrt{d_k}}\\right) V \\]\n",
+    "\n",
+    "这个缩放因子的作用是将点积值控制在一个较合理的范围内，从而避免softmax函数输出过于尖锐的概率分布，确保梯度在反向传播时不会消失。具体效果是：\n",
+    "\n",
+    "- 缩放后的点积值的期望和方差分别为：\n",
+    "\n",
+    "\\[ \\text{E}\\left[\\frac{\\mathbf{q} \\cdot \\mathbf{k}}{\\sqrt{d_k}}\\right] = 0 \\]\n",
+    "\\[ \\text{Var}\\left[\\frac{\\mathbf{q} \\cdot \\mathbf{k}}{\\sqrt{d_k}}\\right] = 1 \\]\n",
+    "\n",
+    "这意味着点积结果的分布会更加稳定和均匀，有助于softmax函数产生更合适的概率分布。\n",
+    "\n",
+    "问题5：mask机制？"
+   ]
   }
  ],
  "metadata": {
@@ -381,7 +490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.-1"
   }
  },
  "nbformat": 4,
